# ctrack

./: #t.csv#  README.md  cc_08_2025_1000.csv  cc_August2025_6921.csv  pyproject.toml  pytest.ini  t.csv  test.gnucash  todo.org
ai_docs/: intro.org  project_into.org
ai_docs/general_rules/: code_constraints.md  code_stages.org
demo_data/: test.gnucash
main_out/: expense_accounts.csv
ref_docs/: filtered_expense_accounts.csv
scripts/: main.py  ng_main.py  ods_main
src/ctrack/: __init__.py  account_sync.py  cc_file_ops.py  check_phases.py  data_service.py  edit_phases.py  flow.py  make_map.py  ng_main.py  ng_wf.py  ods_ops.py
src/ctrack/ng/: ng_main.py
tests/: test_check_10.py  test_check_20.py  test_checks.py  test_dataservice.py  test_edit_10_ods.py  test_edit_20_ods.py  test_flow.py  test_ods_edits.py
tests/data_test_check_10/: matcher_map.csv
tests/data_test_check_20/: matcher_map.csv  new_account_paths.csv  test.gnucash
tests/data_test_edit_10/: edit_10_edited.ods  matcher_map_orig.csv
tests/data_test_edit_20/: account_defs.csv  matcher_map.csv  new_account_paths.csv  new_accounts.ods  orig_test.gnucash  test.gnucash
tests/prep_data/test_accounts_in_matcher/: account_defs.csv  expected_new_paths.csv  matcher_map.csv
tests/prep_data/test_edit_ods_accounts/: edited_new_accounts.ods  matcher_map.csv
tests/prep_data/test_edit_ods_matcher/: edit_10_edited.ods
tests/prep_data/test_full_flow/: cc_no_col_map.csv  cc_one_match_one_miss.csv  (+4 more)
tests/test_check_10/: matcher_map.csv
tests/test_edit_10/: cc_August2025_6921.csv  edit_10_edited.ods
(+1 files in other folders)
